--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Designkit-Animate</title>
-  <link rel="stylesheet" href="css/designkit-animate.css">
+  <title>Designkit-Badge</title>
+  <link rel="stylesheet" href="css/designkit-badge.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <style>
     *,
